# news-alpha-model

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
data/raw/: news.csv  prices.csv
include/news_alpha/: backtest.hpp  csv_reader.hpp  data_loader.hpp  event_study.hpp  feature_engineering.hpp  reporting.hpp  scaled_dataset.hpp  types.hpp
scripts/: build_feature_store.py  generate_research_dataset.py  load_postgres.py
sql/: schema.sql
src/: backtest.cpp  csv_reader.cpp  data_loader.cpp  event_study.cpp  feature_engineering.cpp  main.cpp  reporting.cpp  scaled_dataset.cpp
tests/: test_pipeline.cpp
